--- a/assets/styled.css
+++ b/assets/styled.css
@@ -17,7 +17,7 @@ body{
        align-items: center;
 }
 
-form{
+#newTask{
        padding: 10px;
        border: 2px solid grey;
        border-radius: 20px;
